# reposcanner

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  test_report.md
scripts/: run_experiment.sh
src/vulnscan/: __init__.py  analyzer.py  anthropic_client.py  cli.py  config.py  gemini_client.py  prompts.py  schemas.py
src/vulnscan/chunking/: __init__.py  base.py  python_chunker.py
src/vulnscan/dataset/: cvefixes_loader.py  schema.sql  schema_path.py
src/vulnscan/pipeline/: diff_judge.py  judge.py  metrics.py  run_analysis.py
src/vulnscan/scanner/: report_github.py  report_json.py  report_markdown.py  scan_repo.py
tests/: test_chunking.py  test_schemas.py
